# catwatch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc  run-all.sh  run-backend.sh  run-frontend.sh  watchbackend.cpp  watchbackend.h
backend/: CMakeLists.txt
backend/src/: ApiServer.cpp  ApiServer.h  Database.cpp  Database.h  SensorSimulator.cpp  SensorSimulator.h  main.cpp
backend/src/models/: Models.cpp  Models.h
fonts/: README.md
frontend/: CMakeLists.txt
frontend/assets/fonts/: README.md
frontend/qml/: ActivityScreen.qml  Main.qml  RelaxScreen.qml  Theme.qml  WeatherScreen.qml
frontend/qml/components/: BottomNavBar.qml  CircularProgress.qml  IconCircle.qml  NavDots.qml  PillBadge.qml  PrimaryButton.qml  SecondaryButton.qml
frontend/scripts/: remove_bg.py
frontend/src/: ApiClient.cpp  ApiClient.h  main.cpp
qml/: CatSitting.qml  CatWalking.qml  PageDots.qml  ScreenClock.qml  ScreenSOS.qml  ScreenSteps.qml  ScreenWeather.qml  Theme.qml  WatchBezel.qml  main.qml
